fixed and renewed version of frontend

--- a/styles/light.qss
+++ b/styles/light.qss
@@ -1,4 +1,5 @@
-/* ===== LIGHT THEME (Светлая тема) ===== */
+/* ===== LIGHT THEME (Светлая тема) ====== */
+
 QMainWindow, QWidget, QDialog {
     /* Серебряный, более выраженный градиент */
     background: qlineargradient(x1: 0, y1: 0, x2: 1, y2: 1,
